# st7789v_alternate

./: CMakeLists.txt  Kconfig  README.md  README.rst  decode.txt  nrf52840dk_nrf52840.overlay  ozone_nrf52840.jdebug  prj.conf  rpi_pico_w.overlay  rtt.conf
boards/shields/st7789v_generic/: Kconfig.defconfig  Kconfig.shield  st7789v_alt_nrf52840.overlay  st7789v_alt_pico_w.overlay  st7789v_alternate.overlay
src/: main.c
